--- a/Index.html
+++ b/Index.html
@@ -6,6 +6,7 @@
 </head>
 <body>
     <h1>Mon Titre</h1>
+    <h2>Version branche</h2>
     <p>Ceci est un paragraphe d'exemple pour illustrer un simple contenu HTML.</p>
 </body>
 </html>
