--- a/Index.html
+++ b/Index.html
@@ -7,6 +7,6 @@
 <body>
     <h1>Mon Titre</h1>
     <h2>Version branche</h2>
-    <p>Ceci est un paragraphe d'exemple pour faire le tp de m.Harib en modifiant la phrase.</p>
+    <p>Ceci est un paragraphe d'exemple pour faire le tp de m.Harib.</p>
 </body>
 </html>
